<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.teroki.rokego_android.SaveData">

    <TextView
        android:id="@+id/distance_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="1dp"
        android:layout_marginTop="47dp"
        android:text="@string/label_distance"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="8dp" />

    <EditText
        android:id="@+id/distance_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"

        android:text= "0,0"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toRightOf="@+id/distance_send"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:textSize="@android:dimen/notification_large_icon_height"/>

    <TextView
        android:id="@+id/time_send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_time"
        android:layout_marginTop="82dp"
        app:layout_constraintTop_toBottomOf="@+id/distance_send"
        android:layout_marginLeft="31dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/time_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:inputType="datetime"
        android:text="0:0"
        android:textSize="@android:dimen/notification_large_icon_height"
        app:layout_constraintLeft_toRightOf="@+id/time_send"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/distance_edit" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_data"
        android:onClick="saveDataToDB"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/sports_type_spinner" />

    <Spinner
        android:id="@+id/sports_spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/time_edit"
        app:layout_constraintHorizontal_bias="0.0"
        android:scrollbarSize="12dp"/>

    <Spinner
        android:id="@+id/sports_type_spinner"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/sports_spinner"
        app:layout_constraintHorizontal_bias="0.0" />

</android.support.constraint.ConstraintLayout>
